FIX viewport being more than 100% on mobile because of view toggle

--- a/src/scenes/Layout/components/Representation/components/GridCardToggle/gridCardToggle.css
+++ b/src/scenes/Layout/components/Representation/components/GridCardToggle/gridCardToggle.css
@@ -32,3 +32,12 @@
     background-color: rgba(0, 128, 128, 0.2) !important;
 }
 
+@media (max-width: 768px) {
+
+    .ui.small.header.view-option {
+        display: block;
+        margin: 0;
+        padding: 0;
+    }
+}
+
