--- a/src/scenes/Layout/layout.css
+++ b/src/scenes/Layout/layout.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Roboto', sans-serif;
     display: table;
     position: relative;
+    max-width: 100%;
     width: 100%;
     height: 100%;
     background: #ECEFF1 no-repeat center center fixed; 
@@ -17,12 +18,4 @@ body {
 
 .layout a:hover {
     color: #1B5E20;
-}
-
-@media (max-width: 768px) {
-    
-    body {
-        max-width: 100%;
-    }
-
 }
